<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.example.trafficfeed.ui.TrafficViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.ui.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textAlignment="center"
            tools:text="Title placeholder"
            android:text="@{viewmodel.selectedNotification.name}"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:columnCount="2">

                <TextView
                    android:text="@string/id"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.id}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/source"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.source}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/type"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.type}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/transport"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.transport}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/message"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.message}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/longitude"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{Double.toString(viewmodel.selectedNotification.longitude)}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/latitude"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{Double.toString(viewmodel.selectedNotification.latitude)}"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/timestamp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:minHeight="25dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_columnWeight="1"
                    android:minHeight="25dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@{viewmodel.selectedNotification.date}"
                    android:textAllCaps="false" />
            </GridLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="previous"
                android:onClick="@{() -> viewmodel.previous()}"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="next"
                android:onClick="@{() -> viewmodel.next()}"/>


        </LinearLayout>
    </LinearLayout>
</layout>
